[gd_scene load_steps=12 format=3 uid="uid://sqdu8k5wb3ua"]

[ext_resource type="Texture2D" uid="uid://d30jjelyeh4xq" path="res://assets/sprites/level_objects/tilesheet final.png" id="1_nvx66"]
[ext_resource type="Script" path="res://scripts/onion_spawner.gd" id="1_xp22s"]
[ext_resource type="Texture2D" uid="uid://53s5jir208x6" path="res://assets/sprites/vfx/rock_2_pieces.png" id="3_73adw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_siwwo"]
atlas = ExtResource("1_nvx66")
region = Rect2(144, 128, 16, 16)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_miuws"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_a08rc"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.25, 0.747253), 0.0, 0.0, 0, 0, Vector2(1, 0.252747), -1.69619, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_ib2ck"]
offsets = PackedFloat32Array(0.867647, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjnp6"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_gv1fq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OnionSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OnionSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_v46qh"]
resource_name = "rock"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OnionSprite:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.10472, -0.10472, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OnionSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -7), Vector2(0, -7), Vector2(0, -8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gldcw"]
_data = {
"RESET": SubResource("Animation_gv1fq"),
"rock": SubResource("Animation_v46qh")
}

[node name="onion_spawner" type="Area2D"]
z_index = -1
collision_layer = 0
collision_mask = 2
script = ExtResource("1_xp22s")

[node name="OnionSprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_siwwo")

[node name="DirtParticles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_miuws")
emitting = false
amount = 4
lifetime = 0.8
explosiveness = 0.1
randomness = 0.2
texture = ExtResource("3_73adw")
emission_shape = 3
emission_rect_extents = Vector2(4, 1)
direction = Vector2(0, -1)
gravity = Vector2(0, 98)
initial_velocity_min = 25.0
initial_velocity_max = 35.0
angular_velocity_min = -25.0
angular_velocity_max = 25.0
angle_max = 360.0
scale_amount_curve = SubResource("Curve_a08rc")
color_ramp = SubResource("Gradient_ib2ck")
anim_offset_max = 1.0

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_qjnp6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gldcw")
}

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
